--- a/src/index.pug
+++ b/src/index.pug
@@ -6,6 +6,7 @@ html(lang="ja")
     //- TODO title
     title 仮タイトル
     link(rel="stylesheet", href="css/destyle.css")
+    link(rel="stylesheet", href="css/style.css")
   body
     header
       .container
@@ -22,14 +23,14 @@ html(lang="ja")
         .container
           //- TODO　アイコンの挿入
           img(src="", alt="")
-          p.name Yuichi Kadota
-          p.intro Backend Engineer at MeadiaDo Co.Ltd
+          p Yuichi Kadota
+          p Backend Engineer at MeadiaDo Co.Ltd
       // プロフィール
       section.area_main_profile
         .container
           .head_main: h2.ttl Profile.
       // スキル
-      section.area_main_skill
+      section.area_main_skill.bg_black
         .container
           .head_main: h2.ttl Skill.
       // 趣味など
