--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -58,9 +58,9 @@ header{
   }
 }
 
-/* main_view*/
-.area_main_view{
-  background: #01010a;
+/* top_view*/
+.area_top_view{
+  background: url(../img/top_view.jpg) no-repeat bottom center;
   background-size:cover ;
   .container{
     height: 700px;
