--- a/src/index.pug
+++ b/src/index.pug
@@ -19,7 +19,7 @@ html(lang="ja")
             li: a(href="#") Skill.
             li: a(href="#") Hobby.
     main
-      section.area_main_view
+      section.area_top_view
         .container
           //- TODO　アイコンの挿入
           img(src="", alt="")
